@@ -15,6 +15,7 @@ Application Changes:
 - Removed checkboxes for active skills and knowledge skills from the PACKS creator because Chummer's PACKS system does not properly support either.
 - Wireless bonuses now properly respect the wireless status of any parents of a given item (e.g. gear inside of armor or cyberware inside other cyberware) as well as their equipped status. Fixes #4351.
 - Quotation marks in the names of spells, qualities, critter powers, adept powers, cyberware, et al. or any categories thereof should no longer cause Chummer to either crash or not recognize the item in question.
+- Special attributes are no longer exported unless the character in question has them enabled. Fixes #4366.
 
 Data Changes:
 - Consolidated all German Data Changes custom data into a single German Data Changes entry.
